5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1684_1105.log
== TEST (2019-04-29 17:57:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input('descricao do brasao:')
print('Entrada:', casa)
if(casa!=lobo and casa!=leao and casa!=veado and casa!=dragao and casa!=rosa and casa!=sol and casa!=lula and casa!=esfolado and casa!= turta):
print('Brasao invalido')
else:
	if(casa==lobo):
	casa= "Stark"
	elif(casa==leao):
	casa= "Lannister"
	elif(casa==veado):
	casa= "Baratheon"
	elif(casa==dragao):
	casa= "Targaryen"
	elif(casa==rosa):
	casa= "Tyrell"
	elif(casa==sol):
	casa= "Martell"
	elif(casa==lula):
	casa= "Greyjoy"
	elif(casa==esfolado):
	casa= "Bolton"
	elif(casa==turta):
	casa= "Tully"
	print("casa", casa)
-- ERROR:
File "XXXX", line 6
    print('Brasao invalido')
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:57:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input('descricao do brasao:')
print('Entrada:', casa)
if(casa!=lobo and casa!=leao and casa!=veado and casa!=dragao and casa!=rosa and casa!=sol and casa!=lula and casa!=esfolado and casa!= turta):
print('Brasao: invalido')
else:
	if(casa==lobo):
	casa= "Stark"
	elif(casa==leao):
	casa= "Lannister"
	elif(casa==veado):
	casa= "Baratheon"
	elif(casa==dragao):
	casa= "Targaryen"
	elif(casa==rosa):
	casa= "Tyrell"
	elif(casa==sol):
	casa= "Martell"
	elif(casa==lula):
	casa= "Greyjoy"
	elif(casa==esfolado):
	casa= "Bolton"
	elif(casa==turta):
	casa= "Tully"
	print("casa", casa)
-- ERROR:
File "XXXX", line 6
    print('Brasao: invalido')
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:06:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada: ")
print("Entrada:",a)
if a == "lobo" or a == "leao" or a == "veado" or a == "dragao" or a == "rosa" or a == "sol" or a == "lula" or a == "esfolado" or a == "turta":
	if a=="lobo":
		print("Casa: Stark")
	elif a =="leao":
		print("Casa: Lannister")
	elif a =="veado":
		print("Casa: Baratheon")
	elif a =="dragao":
		print("Casa: Targaryen")
	elif a =="rosa":
		print("Casa: Tyrell")
	elif a =="sol":
		print("Casa: Martell")
	elif a == "lula":
		print("Casa: Greyjoy")
	elif a == "esfolado":
		print("Casa: Bolton")
	elif a == "turta":
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.160101
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
